Update ResourceBackedDealership to pass tests